--- a/Savio/StatView/SAStatViewController.xib
+++ b/Savio/StatView/SAStatViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="GothamRounded-Medium.otf">
@@ -170,9 +170,12 @@
                                 <constraint firstItem="nPD-Gf-Sh1" firstAttribute="top" secondItem="ZaU-r2-ec3" secondAttribute="top" constant="5" id="yFl-lt-zy2"/>
                             </constraints>
                         </view>
-                        <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9v4-mA-xGM">
-                            <rect key="frame" x="30" y="73" width="540" height="43"/>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9v4-mA-xGM">
+                            <rect key="frame" x="30" y="73" width="540" height="45"/>
                             <color key="backgroundColor" red="0.94117647059999998" green="0.63137254899999995" blue="0.1843137255" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="45" id="5pI-ou-GhH"/>
+                            </constraints>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                     <integer key="value" value="5"/>
@@ -195,12 +198,15 @@
                     <constraints>
                         <constraint firstAttribute="bottom" secondItem="3mQ-sn-Pop" secondAttribute="bottom" id="8on-qI-75O"/>
                         <constraint firstItem="ZaU-r2-ec3" firstAttribute="top" secondItem="ftd-KB-sgJ" secondAttribute="bottom" id="HX5-R6-Apw"/>
+                        <constraint firstItem="9v4-mA-xGM" firstAttribute="top" secondItem="ZaU-r2-ec3" secondAttribute="bottom" id="Jcf-VX-s9P"/>
                         <constraint firstItem="3mQ-sn-Pop" firstAttribute="leading" secondItem="lsX-Nh-UJc" secondAttribute="leading" constant="30" id="Waz-db-PrS"/>
                         <constraint firstItem="3mQ-sn-Pop" firstAttribute="top" secondItem="ZaU-r2-ec3" secondAttribute="bottom" id="e8l-Gn-M9G"/>
                         <constraint firstAttribute="trailing" secondItem="3mQ-sn-Pop" secondAttribute="trailing" constant="30" id="fxj-85-8UH"/>
                         <constraint firstAttribute="trailing" secondItem="ZaU-r2-ec3" secondAttribute="trailing" id="h13-hh-i9Q"/>
+                        <constraint firstItem="9v4-mA-xGM" firstAttribute="leading" secondItem="lsX-Nh-UJc" secondAttribute="leading" constant="30" id="hnX-bk-WP1"/>
                         <constraint firstAttribute="height" constant="120" id="j3G-GW-cyK"/>
                         <constraint firstItem="ZaU-r2-ec3" firstAttribute="leading" secondItem="lsX-Nh-UJc" secondAttribute="leading" id="lCr-wF-6Xa"/>
+                        <constraint firstAttribute="trailing" secondItem="9v4-mA-xGM" secondAttribute="trailing" constant="30" id="nm9-68-QLv"/>
                         <constraint firstItem="ftd-KB-sgJ" firstAttribute="top" secondItem="lsX-Nh-UJc" secondAttribute="top" id="yXk-P8-gV2"/>
                         <constraint firstItem="ftd-KB-sgJ" firstAttribute="centerX" secondItem="lsX-Nh-UJc" secondAttribute="centerX" id="zPV-5G-xCP"/>
                     </constraints>
