--- a/Savio/ProgressView/SAGroupProgressViewController.xib
+++ b/Savio/ProgressView/SAGroupProgressViewController.xib
@@ -7,6 +7,7 @@
     <customFonts key="customFonts">
         <mutableArray key="gotham-rounded-book-2.otf">
             <string>GothamRounded-Book</string>
+            <string>GothamRounded-Book</string>
         </mutableArray>
     </customFonts>
     <objects>
@@ -109,27 +110,42 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="alJ-QQ-JNZ">
                             <rect key="frame" x="0.0" y="0.0" width="600" height="444"/>
                             <subviews>
-                                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c4S-KN-7rD">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="443"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My saving plan" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rxj-TM-ht8">
+                                    <rect key="frame" x="20" y="0.0" width="560" height="20"/>
+                                    <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="16"/>
+                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c4S-KN-7rD">
+                                    <rect key="frame" x="0.0" y="20" width="600" height="190"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="443" id="XOO-Gc-ITl"/>
+                                        <constraint firstAttribute="height" constant="190" id="XOO-Gc-ITl"/>
                                     </constraints>
+                                    <connections>
+                                        <outlet property="delegate" destination="-1" id="Inx-xE-lRN"/>
+                                    </connections>
                                 </scrollView>
                                 <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="gf6-nN-cap">
-                                    <rect key="frame" x="281" y="156" width="39" height="37"/>
+                                    <rect key="frame" x="281" y="200" width="39" height="37"/>
+                                    <color key="tintColor" red="0.63137254899999995" green="0.83921568629999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="39" id="bxc-EW-XAl"/>
                                         <constraint firstAttribute="height" constant="37" id="c0m-u8-S0L"/>
                                     </constraints>
+                                    <color key="currentPageIndicatorTintColor" red="0.63137254899999995" green="0.83921568629999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
                                 </pageControl>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
-                                <constraint firstItem="gf6-nN-cap" firstAttribute="top" secondItem="alJ-QQ-JNZ" secondAttribute="top" constant="156" id="3Vx-dX-Enl"/>
+                                <constraint firstItem="gf6-nN-cap" firstAttribute="top" secondItem="alJ-QQ-JNZ" secondAttribute="top" constant="200" id="3Vx-dX-Enl"/>
+                                <constraint firstItem="c4S-KN-7rD" firstAttribute="top" secondItem="Rxj-TM-ht8" secondAttribute="bottom" id="4ef-df-spo"/>
+                                <constraint firstItem="Rxj-TM-ht8" firstAttribute="leading" secondItem="alJ-QQ-JNZ" secondAttribute="leading" constant="20" id="DMd-oH-uuv"/>
                                 <constraint firstItem="c4S-KN-7rD" firstAttribute="leading" secondItem="alJ-QQ-JNZ" secondAttribute="leading" id="FaW-Nk-sMq"/>
                                 <constraint firstAttribute="trailing" secondItem="c4S-KN-7rD" secondAttribute="trailing" id="Oa7-QD-0Ta"/>
+                                <constraint firstAttribute="trailing" secondItem="Rxj-TM-ht8" secondAttribute="trailing" constant="20" id="dgt-Qf-DZV"/>
                                 <constraint firstAttribute="height" constant="444" id="gqc-Mi-sis"/>
-                                <constraint firstItem="c4S-KN-7rD" firstAttribute="top" secondItem="alJ-QQ-JNZ" secondAttribute="top" id="uE0-Fq-mvb"/>
+                                <constraint firstItem="Rxj-TM-ht8" firstAttribute="top" secondItem="alJ-QQ-JNZ" secondAttribute="top" id="mhJ-aS-s5H"/>
+                                <constraint firstItem="c4S-KN-7rD" firstAttribute="top" secondItem="alJ-QQ-JNZ" secondAttribute="top" constant="20" id="uE0-Fq-mvb"/>
                                 <constraint firstItem="gf6-nN-cap" firstAttribute="centerX" secondItem="alJ-QQ-JNZ" secondAttribute="centerX" id="xTM-HU-mFF"/>
                             </constraints>
                         </view>
