--- a/Savio/ProgressView/SAGroupProgressViewController.xib
+++ b/Savio/ProgressView/SAGroupProgressViewController.xib
@@ -8,6 +8,7 @@
         <mutableArray key="gotham-rounded-book-2.otf">
             <string>GothamRounded-Book</string>
             <string>GothamRounded-Book</string>
+            <string>GothamRounded-Book</string>
         </mutableArray>
     </customFonts>
     <objects>
@@ -20,7 +21,7 @@
                 <outlet property="planButton" destination="D7a-fw-i33" id="lOQ-Hl-CtK"/>
                 <outlet property="spendButton" destination="OGV-x5-hXK" id="vk7-1r-eNw"/>
                 <outlet property="statsButton" destination="1lY-ph-r2K" id="kNQ-5m-EPO"/>
-                <outlet property="tblHt" destination="Nwv-eT-6aZ" id="0hE-yM-zNW"/>
+                <outlet property="tblHt" destination="P6A-uP-4hQ" id="tvS-ag-Mmf"/>
                 <outlet property="tblView" destination="Ihf-ot-vbi" id="X4u-VU-2M3"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -113,10 +114,16 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="alJ-QQ-JNZ">
                             <rect key="frame" x="0.0" y="0.0" width="600" height="444"/>
                             <subviews>
-                                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c4S-KN-7rD">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="228"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My saving plan" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rxj-TM-ht8">
+                                    <rect key="frame" x="20" y="0.0" width="560" height="20"/>
+                                    <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="16"/>
+                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c4S-KN-7rD">
+                                    <rect key="frame" x="0.0" y="20" width="600" height="190"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="228" id="XOO-Gc-ITl"/>
+                                        <constraint firstAttribute="height" constant="190" id="XOO-Gc-ITl"/>
                                     </constraints>
                                     <connections>
                                         <outlet property="delegate" destination="-1" id="Inx-xE-lRN"/>
@@ -144,7 +151,7 @@
                                     <rect key="frame" x="0.0" y="265" width="600" height="171"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="171" id="Nwv-eT-6aZ"/>
+                                        <constraint firstAttribute="height" constant="171" id="P6A-uP-4hQ"/>
                                     </constraints>
                                     <connections>
                                         <outlet property="dataSource" destination="-1" id="bSN-xX-w5Z"/>
@@ -154,26 +161,23 @@
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
-                                <constraint firstItem="gf6-nN-cap" firstAttribute="top" secondItem="alJ-QQ-JNZ" secondAttribute="top" constant="156" id="3Vx-dX-Enl"/>
-                                <constraint firstAttribute="trailing" secondItem="Jc8-Fd-CSw" secondAttribute="trailing" constant="30" id="DCv-ZC-oGg"/>
+                                <constraint firstItem="gf6-nN-cap" firstAttribute="top" secondItem="alJ-QQ-JNZ" secondAttribute="top" constant="200" id="3Vx-dX-Enl"/>
+                                <constraint firstItem="c4S-KN-7rD" firstAttribute="top" secondItem="Rxj-TM-ht8" secondAttribute="bottom" id="4ef-df-spo"/>
+                                <constraint firstItem="Jc8-Fd-CSw" firstAttribute="top" secondItem="c4S-KN-7rD" secondAttribute="bottom" constant="26" id="89c-RR-bFx"/>
+                                <constraint firstAttribute="trailing" secondItem="Ihf-ot-vbi" secondAttribute="trailing" id="A0f-HT-7Nq"/>
+                                <constraint firstAttribute="trailing" secondItem="Jc8-Fd-CSw" secondAttribute="trailing" constant="30" id="Aad-EX-UWa"/>
+                                <constraint firstItem="Jc8-Fd-CSw" firstAttribute="leading" secondItem="alJ-QQ-JNZ" secondAttribute="leading" constant="30" id="CYh-xv-wNR"/>
+                                <constraint firstItem="Rxj-TM-ht8" firstAttribute="leading" secondItem="alJ-QQ-JNZ" secondAttribute="leading" constant="20" id="DMd-oH-uuv"/>
                                 <constraint firstItem="c4S-KN-7rD" firstAttribute="leading" secondItem="alJ-QQ-JNZ" secondAttribute="leading" id="FaW-Nk-sMq"/>
-                                <constraint firstAttribute="trailing" secondItem="Ihf-ot-vbi" secondAttribute="trailing" id="Ict-Hy-a93"/>
                                 <constraint firstAttribute="trailing" secondItem="c4S-KN-7rD" secondAttribute="trailing" id="Oa7-QD-0Ta"/>
                                 <constraint firstAttribute="trailing" secondItem="Rxj-TM-ht8" secondAttribute="trailing" constant="20" id="dgt-Qf-DZV"/>
                                 <constraint firstAttribute="height" constant="444" id="gqc-Mi-sis"/>
-                                <constraint firstItem="Jc8-Fd-CSw" firstAttribute="leading" secondItem="alJ-QQ-JNZ" secondAttribute="leading" constant="30" id="jSd-dX-vkF"/>
-                                <constraint firstItem="Ihf-ot-vbi" firstAttribute="leading" secondItem="alJ-QQ-JNZ" secondAttribute="leading" id="jzW-rT-lSC"/>
-                                <constraint firstItem="Jc8-Fd-CSw" firstAttribute="top" secondItem="c4S-KN-7rD" secondAttribute="bottom" constant="8" id="lbj-Yh-vKd"/>
-                                <constraint firstItem="Ihf-ot-vbi" firstAttribute="top" secondItem="Jc8-Fd-CSw" secondAttribute="bottom" constant="8" id="pRu-IZ-QbR"/>
-                                <constraint firstAttribute="bottom" secondItem="Ihf-ot-vbi" secondAttribute="bottom" constant="8" id="tYb-tU-nTC"/>
-                                <constraint firstItem="c4S-KN-7rD" firstAttribute="top" secondItem="alJ-QQ-JNZ" secondAttribute="top" id="uE0-Fq-mvb"/>
+                                <constraint firstItem="Ihf-ot-vbi" firstAttribute="leading" secondItem="alJ-QQ-JNZ" secondAttribute="leading" id="hfv-kG-POB"/>
+                                <constraint firstItem="Ihf-ot-vbi" firstAttribute="top" secondItem="Jc8-Fd-CSw" secondAttribute="bottom" constant="8" id="kbn-R3-gmW"/>
+                                <constraint firstItem="Rxj-TM-ht8" firstAttribute="top" secondItem="alJ-QQ-JNZ" secondAttribute="top" id="mhJ-aS-s5H"/>
+                                <constraint firstItem="c4S-KN-7rD" firstAttribute="top" secondItem="alJ-QQ-JNZ" secondAttribute="top" constant="20" id="uE0-Fq-mvb"/>
                                 <constraint firstItem="gf6-nN-cap" firstAttribute="centerX" secondItem="alJ-QQ-JNZ" secondAttribute="centerX" id="xTM-HU-mFF"/>
                             </constraints>
-                            <variation key="default">
-                                <mask key="constraints">
-                                    <exclude reference="tYb-tU-nTC"/>
-                                </mask>
-                            </variation>
                         </view>
                     </subviews>
                     <constraints>
