--- a/Savio/PINViewController/CreatePINViewController.xib
+++ b/Savio/PINViewController/CreatePINViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="GothamRounded-Light.otf">
@@ -41,6 +41,18 @@
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r4N-aq-d7H">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                     <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ekf-PI-tkm">
+                            <rect key="frame" x="30" y="379" width="540" height="45"/>
+                            <color key="backgroundColor" red="0.94117647059999998" green="0.64313725489999995" blue="0.22352941179999999" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="45" id="X3J-y8-rel"/>
+                            </constraints>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                    <integer key="value" value="5"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                        </view>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="savivo-logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="d5P-qH-aIi">
                             <rect key="frame" x="281" y="50" width="40" height="40"/>
                             <constraints>
@@ -140,6 +152,7 @@
                         <constraint firstItem="Aa7-UQ-9QT" firstAttribute="centerX" secondItem="r4N-aq-d7H" secondAttribute="centerX" id="1Dk-E1-FeX"/>
                         <constraint firstAttribute="trailing" secondItem="Lq4-PM-TIF" secondAttribute="trailing" constant="30" id="7Ym-8x-IYw"/>
                         <constraint firstItem="dxE-82-rRE" firstAttribute="top" secondItem="Caz-QS-qcK" secondAttribute="bottom" constant="20" id="F6P-Kg-do5"/>
+                        <constraint firstItem="Ekf-PI-tkm" firstAttribute="leading" secondItem="r4N-aq-d7H" secondAttribute="leading" constant="30" id="HDz-2m-hB5"/>
                         <constraint firstItem="Lq4-PM-TIF" firstAttribute="top" secondItem="JfG-pe-WIG" secondAttribute="bottom" constant="10" id="ISI-RF-5tS"/>
                         <constraint firstAttribute="trailing" secondItem="Caz-QS-qcK" secondAttribute="trailing" constant="30" id="Jcm-Rf-mtr"/>
                         <constraint firstAttribute="trailing" secondItem="JfG-pe-WIG" secondAttribute="trailing" constant="30" id="Jh6-5G-QHY"/>
@@ -149,12 +162,14 @@
                         <constraint firstItem="Lq4-PM-TIF" firstAttribute="centerX" secondItem="r4N-aq-d7H" secondAttribute="centerX" id="TNd-fm-YIk"/>
                         <constraint firstItem="d5P-qH-aIi" firstAttribute="top" secondItem="r4N-aq-d7H" secondAttribute="top" constant="50" id="U33-fX-z18"/>
                         <constraint firstItem="KSj-ds-clV" firstAttribute="centerX" secondItem="r4N-aq-d7H" secondAttribute="centerX" id="Vt5-RQ-uC6"/>
+                        <constraint firstItem="Ekf-PI-tkm" firstAttribute="top" secondItem="Lq4-PM-TIF" secondAttribute="bottom" constant="10" id="X44-1o-USR"/>
                         <constraint firstItem="d5P-qH-aIi" firstAttribute="centerX" secondItem="r4N-aq-d7H" secondAttribute="centerX" constant="0.5" id="YdO-Xd-1KC"/>
                         <constraint firstItem="KSj-ds-clV" firstAttribute="top" secondItem="r4N-aq-d7H" secondAttribute="top" constant="119" id="ZUp-F3-4fu"/>
                         <constraint firstItem="Aa7-UQ-9QT" firstAttribute="top" secondItem="d5P-qH-aIi" secondAttribute="bottom" constant="140" id="bde-7G-8RC"/>
                         <constraint firstItem="JfG-pe-WIG" firstAttribute="top" secondItem="KSj-ds-clV" secondAttribute="bottom" constant="60" id="dJg-3l-JaX"/>
                         <constraint firstItem="Caz-QS-qcK" firstAttribute="centerX" secondItem="r4N-aq-d7H" secondAttribute="centerX" id="dhz-ho-e6v"/>
                         <constraint firstAttribute="bottom" secondItem="Caz-QS-qcK" secondAttribute="bottom" constant="220" id="g7H-sB-5rP"/>
+                        <constraint firstAttribute="trailing" secondItem="Ekf-PI-tkm" secondAttribute="trailing" constant="30" id="i9r-sg-c02"/>
                         <constraint firstItem="dxE-82-rRE" firstAttribute="centerX" secondItem="r4N-aq-d7H" secondAttribute="centerX" id="jgA-dG-GE9"/>
                         <constraint firstItem="Caz-QS-qcK" firstAttribute="top" secondItem="Lq4-PM-TIF" secondAttribute="bottom" constant="10" id="nOa-Si-waG"/>
                         <constraint firstItem="nsk-GE-yY9" firstAttribute="top" secondItem="KSj-ds-clV" secondAttribute="bottom" constant="10" id="oWW-eQ-fdx"/>
