--- a/Savio/HurrayViewController/HurreyViewController.xib
+++ b/Savio/HurrayViewController/HurreyViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -43,9 +43,26 @@
                     </constraints>
                     <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="33"/>
                     <nil key="highlightedColor"/>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="RYl-Dh-IqS"/>
+                        </mask>
+                    </variation>
                 </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L0r-9h-Hap">
+                    <rect key="frame" x="30" y="361" width="540" height="45"/>
+                    <color key="backgroundColor" red="0.94117647059999998" green="0.64313725489999995" blue="0.22352941179999999" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="45" id="MHA-Zh-11L"/>
+                    </constraints>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <integer key="value" value="5"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Let's go create a new saving plan" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kl4-Vf-3Td">
-                    <rect key="frame" x="158" y="168" width="283" height="21"/>
+                    <rect key="frame" x="158" y="190" width="283" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="Dv6-SE-Zr0"/>
                         <constraint firstAttribute="width" secondItem="Kl4-Vf-3Td" secondAttribute="height" multiplier="283:21" id="OOc-Mw-EH0"/>
@@ -54,19 +71,29 @@
                     <fontDescription key="fontDescription" name="GothamRounded-Light" family="Gotham Rounded" pointSize="17"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="OOc-Mw-EH0"/>
+                        </mask>
+                    </variation>
                 </label>
                 <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xEm-qu-yo9">
-                    <rect key="frame" x="30" y="350" width="540" height="51"/>
+                    <rect key="frame" x="30" y="361" width="540" height="40"/>
                     <color key="backgroundColor" red="1" green="0.64705882349999999" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="540" id="7xe-7R-FKX"/>
-                        <constraint firstAttribute="height" constant="51" id="FmS-H7-mQf"/>
+                        <constraint firstAttribute="height" constant="40" id="FmS-H7-mQf"/>
                         <constraint firstAttribute="width" secondItem="xEm-qu-yo9" secondAttribute="height" multiplier="180:17" id="bXQ-9C-jmY"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="24"/>
                     <state key="normal" title="Create a plan">
                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="bXQ-9C-jmY"/>
+                        </mask>
+                    </variation>
                     <connections>
                         <action selector="createPlanPressed:" destination="-1" eventType="touchUpInside" id="8FM-3z-4nl"/>
                     </connections>
@@ -74,16 +101,25 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="L0r-9h-Hap" firstAttribute="top" secondItem="Kl4-Vf-3Td" secondAttribute="bottom" constant="150" id="3yO-Zd-Rw8"/>
                 <constraint firstItem="Kl4-Vf-3Td" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="FmF-QL-WjY"/>
                 <constraint firstItem="xEm-qu-yo9" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="30" id="HJl-M2-443"/>
                 <constraint firstItem="YAh-VO-ioi" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" constant="1" id="Pg4-hT-2tT"/>
+                <constraint firstItem="L0r-9h-Hap" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="30" id="R8z-YJ-nHb"/>
                 <constraint firstAttribute="trailing" secondItem="xEm-qu-yo9" secondAttribute="trailing" constant="30" id="aNu-xR-TqH"/>
                 <constraint firstItem="srb-ZI-X44" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="cMg-GF-vpM"/>
                 <constraint firstItem="Kl4-Vf-3Td" firstAttribute="top" secondItem="srb-ZI-X44" secondAttribute="bottom" constant="21" id="ezv-lJ-c68"/>
                 <constraint firstAttribute="bottom" secondItem="xEm-qu-yo9" secondAttribute="bottom" constant="199" id="feI-TH-v8Z"/>
                 <constraint firstItem="YAh-VO-ioi" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="25" id="pAk-Cu-7NA"/>
+                <constraint firstAttribute="trailing" secondItem="L0r-9h-Hap" secondAttribute="trailing" constant="30" id="pNm-Et-rT6"/>
+                <constraint firstAttribute="bottom" secondItem="L0r-9h-Hap" secondAttribute="bottom" constant="194" id="vxa-kk-N1k"/>
                 <constraint firstItem="srb-ZI-X44" firstAttribute="top" secondItem="YAh-VO-ioi" secondAttribute="bottom" constant="9" id="wjy-Ty-YJH"/>
             </constraints>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="ezv-lJ-c68"/>
+                </mask>
+            </variation>
         </view>
     </objects>
     <resources>
