--- a/Savio/PINViewController/SAEnterYourPINViewController.xib
+++ b/Savio/PINViewController/SAEnterYourPINViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="GothamRounded-Light.otf">
@@ -32,6 +32,7 @@
                 <outlet property="loginButton" destination="oLD-AK-Fy3" id="gLJ-0D-MQx"/>
                 <outlet property="passcodeDoesNotMatchLabel" destination="uH3-CJ-3vG" id="cqb-Pz-T9Y"/>
                 <outlet property="registerButton" destination="1ng-Ts-N3O" id="TEo-3O-Hbk"/>
+                <outlet property="registerButtonBackgroundView" destination="8My-tM-w3z" id="Xpi-AY-qwC"/>
                 <outlet property="toolBar" destination="dVV-Qb-gor" id="d5z-Vh-oai"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -80,6 +81,18 @@
                         <action selector="clickOnLoginButton:" destination="-1" eventType="touchUpInside" id="w72-TO-IPa"/>
                     </connections>
                 </button>
+                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8My-tM-w3z">
+                    <rect key="frame" x="30" y="320" width="540" height="45"/>
+                    <color key="backgroundColor" red="0.94117647059999998" green="0.64313725489999995" blue="0.22352941179999999" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="45" id="42p-eW-gpk"/>
+                    </constraints>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <integer key="value" value="5"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YRO-Ha-Z4h">
                     <rect key="frame" x="215" y="259" width="170" height="30"/>
                     <constraints>
@@ -174,6 +187,8 @@
                 <constraint firstItem="ajo-fL-EaP" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="30" id="4Ja-Ty-ahV"/>
                 <constraint firstAttribute="trailing" secondItem="oLD-AK-Fy3" secondAttribute="trailing" constant="30" id="5hl-8q-orw"/>
                 <constraint firstAttribute="trailing" secondItem="XRg-0T-Rrk" secondAttribute="trailing" constant="30" id="GZa-Oy-Qav"/>
+                <constraint firstItem="8My-tM-w3z" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="30" id="KTD-br-3iY"/>
+                <constraint firstAttribute="trailing" secondItem="8My-tM-w3z" secondAttribute="trailing" constant="30" id="L0n-PX-B8z"/>
                 <constraint firstItem="yO2-Dv-Fci" firstAttribute="top" secondItem="1ng-Ts-N3O" secondAttribute="bottom" constant="32" id="L8L-BW-n1k"/>
                 <constraint firstItem="XRg-0T-Rrk" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="30" id="Mcg-zc-hJy"/>
                 <constraint firstItem="1ng-Ts-N3O" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="30" id="Nnp-5x-fI1"/>
@@ -193,6 +208,7 @@
                 <constraint firstAttribute="trailing" secondItem="ajo-fL-EaP" secondAttribute="trailing" constant="30" id="stw-AA-zMX"/>
                 <constraint firstItem="YRO-Ha-Z4h" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="tWp-PJ-8uI"/>
                 <constraint firstItem="OTi-RR-xfC" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" constant="0.5" id="tkS-2e-Ms8"/>
+                <constraint firstItem="8My-tM-w3z" firstAttribute="top" secondItem="WBk-LD-bTU" secondAttribute="bottom" constant="25" id="vy6-9D-Rbp"/>
                 <constraint firstItem="WBk-LD-bTU" firstAttribute="top" secondItem="YRO-Ha-Z4h" secondAttribute="bottom" constant="-34" id="wVQ-8J-Vmk"/>
                 <constraint firstItem="oLD-AK-Fy3" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="wpY-h4-ACF"/>
                 <constraint firstItem="YRO-Ha-Z4h" firstAttribute="top" secondItem="oLD-AK-Fy3" secondAttribute="bottom" constant="10" id="zIW-82-qsR"/>
