--- a/Savio/SavingPlanSetupCells/CancelButtonTableViewCell.xib
+++ b/Savio/SavingPlanSetupCells/CancelButtonTableViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="GothamRounded-Medium.otf">
@@ -16,11 +16,20 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="63"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="63.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kA2-yU-na3">
+                        <rect key="frame" x="0.0" y="18" width="320" height="45"/>
+                        <color key="backgroundColor" red="0.78431372549019607" green="0.23921568627450979" blue="0.22745098039215686" alpha="1" colorSpace="calibratedRGB"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                <integer key="value" value="5"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DTW-GC-rAk">
-                        <rect key="frame" x="0.0" y="23" width="320" height="40"/>
+                        <rect key="frame" x="0.0" y="18" width="320" height="40"/>
                         <color key="backgroundColor" red="0.92941176470588238" green="0.38431372549019605" blue="0.32549019607843138" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="40" id="LDR-i9-ZVN"/>
@@ -35,8 +44,13 @@
                     <constraint firstAttribute="bottom" secondItem="DTW-GC-rAk" secondAttribute="bottom" id="1Gx-bX-1xn"/>
                     <constraint firstAttribute="trailing" secondItem="DTW-GC-rAk" secondAttribute="trailing" id="U2N-hh-Naj"/>
                     <constraint firstItem="DTW-GC-rAk" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="asF-NE-WSY"/>
-                    <constraint firstItem="DTW-GC-rAk" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="23" id="mlr-ip-ax4"/>
+                    <constraint firstItem="DTW-GC-rAk" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="18" id="mlr-ip-ax4"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="1Gx-bX-1xn"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <connections>
                 <outlet property="cancelSavingPlanButton" destination="DTW-GC-rAk" id="8x6-at-tac"/>
